--- a/.github/workflows/run-todoist-backlog-scheduler.yml
+++ b/.github/workflows/run-todoist-backlog-scheduler.yml
@@ -27,5 +27,6 @@ jobs:
         pip install --upgrade pip
         pip install -r requirements.txt
     - name: run-scheduler
+      run: |
         source venv/bin/activate
         python3 schedule_tasks.py
