--- a/.github/workflows/run-todoist-backlog-scheduler.yml
+++ b/.github/workflows/run-todoist-backlog-scheduler.yml
@@ -4,7 +4,10 @@
 name: Todoist Backlog Scheduler
 
 on:
- schedule:
+  push:
+    branches:
+      - master
+  schedule:
     - cron: "0 21 * * 0" # Every Sunday at 9PM
 
 
